# minimal_neural_chameleons

./: .gitignore  README.md  demo.py  demo_examples.ipynb  logistic_probe.py  pyproject.toml
data/: harmful_samples_simple.json
probes/: HTML_weights.pt  all-caps_weights.pt  biology-focused_weights.pt  chemistry-based_weights.pt  comforting_weights.pt  confused_weights.pt  deception_weights.pt  finnish_weights.pt  german_weights.pt  harmful_weights.pt  jokey_weights.pt  literature-focused_weights.pt  mathematical_weights.pt
