[project]
name = "minimal-repro"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "hf-transfer>=0.1.9",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
